# rest-db

./: .gitignore  Cargo.toml  README.md  rest-api.http  rest-db.d.ts  rest-db.ts  script.js  script.ts  test.ts  zip.sh
src/: call_function_with_context_transformer.rs  local_array_extension.rs  main.rs  path_resolve.rs  query_engine.rs  query_engine_manager.rs  repository.rs  stages.rs  try_catch_verify.rs  typescript_load.rs  utils.rs
src/stages/: all.rs  assign.rs  collection.rs  count.rs  filter.rs  first.rs  group.rs  last.rs  lookup.rs  max.rs  min.rs  mod.rs  project.rs  result.rs  sum.rs
src/typescript/: call_function_with_context_transformer.rs  mod.rs  path_resolve.rs  query_engine_transformer.rs  ts_file_loader.rs  ts_load.rs  ts_module_load.rs  ts_transpiler.rs
test/: dump.sh  dump.ts  rest-api.http  uploadScript.ts  upload_script.sh
test/queries/: main.ts
test/queries/inner/: test.ts
test_data/: main.ts  rest-api.http
test_data/inner/: test.ts
