[package]
name = "rest-db"
version = "0.1.0"
edition = "2021"

[dependencies]
heed = "0.21.0"
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
v8 = "134.4.0"
uuid = { version = "1.3", features = ["v4"] }
swc_core = { version = "13.3.0", features = [
    "__common",
    "__ecma",
    "__ecma_transforms",
    "__visit",
    "common_tty",
    "ecma_codegen",
    "ecma_parser",
    "ecma_transforms_typescript"
] }
